syntax = "proto3";

option csharp_namespace = "HappyCoding.GRpcCommunication.Shared.ComplexRequest";

package services;

service ComplexRequestHandler {
  rpc Handle (ComplexRequest) returns (ComplexResponse);
}

message ComplexRequest {
  string message_id = 1;
  int64 timestamp_ticks = 2;
  string location_id = 3;
  int32 station_id = 4;
  repeated DummyRequestItem dummy_item_list = 5;
}

message DummyRequestItem {
  string property1 = 1;
  string property2 = 2;
  int32 property3 = 3;
  int32 property4 = 4;
  string property5 = 5;
  int64 property6 = 6;
}

message ComplexResponse {
  string message = 1;
  repeated DummyResponseItem dummy_item_list = 2;
}

message DummyResponseItem{
  int32 property1 = 1;
}